# arcaflow-plugin-metadata

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  example_plugin.py  metadata_plugin.py  pyproject.toml  requirements.txt  test_example_plugin.py  test_metadata_plugin.py
.github/workflows/: act.yaml  build.yaml  carpenter.yaml  carpenter_build.yaml  carpenter_push.yaml  workflow.yaml
ansible_playbook/: playbook.yml
arcaflow_plugin_metadata/: metadata_plugin.py  metadata_schema.py
tests/: test_arcaflow_plugin_metadata.py  test_metadata_plugin.py
