[tool.poetry]
name = "arcaflow-plugin-metadata"
version = "0.1.0"
description = ""
authors = ["Arcalot"]
license = "Apache-2.0+GPL-2.0-only"

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "0.9.0"
ansible-core = "^2.14.0"
ansible-runner = "2.3.1"

[tool.poetry.dev-dependencies]
docformatter = "^1.5.0"
autoflake = "^1.7.6"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
