[tool.poetry]
name = "arcaflow-plugin-metadata"
version = "0.1.0"
description = ""
authors = ["Arcalot"]
license = "Apache-2.0+GPL-2.0-only"

packages = [
   { include="metadata_plugin.py", from="./arcaflow_plugin_metadata"  },
]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "0.10.3"
ansible-core = "^2.14.0"
ansible-runner = "2.3.3"

[tool.poetry.dev-dependencies]
docformatter = "^1.5.0"
autoflake = "^2.0.0"
black = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
